# MultiGame

./: .gitignore  CMakeLists.txt  CMakeLists.txt.txt  MultiGameIA3.sln  MultiGameIA3.vcxproj  MultiGameIA3.vcxproj.filters  TODO.txt
.github/workflows/: build-macos.yml
Headers/: BasicBoard.h  ChessBoard.h  Game.h  GameMenu.h  IBoard.h  IDrawable.h  MainLoop.h  Menu.h  MenuManager.h  NodePool.h  OptionSelector.h  Piece.h  Player.h  Power4Board.h  Replayer.h  Utility.h
Headers/Graphics/: Container.h  IDrawable.h  Image.h  Menu.h  OptionSelector.h  ScrollBar.h
MultiGameIA3/Headers/: Board.h  ChessBoard.h  Game.h  IBoard.h  Menu.h  MenuManager.h  Node.h  Piece.h  Player.h  Power4Board.h  Utility.h
MultiGameIA3/Source/: Board.cpp  ChessBoard.cpp  Game.cpp  Menu.cpp  MenuManager.cpp  Node.cpp  Piece.cpp  Player.cpp  Power4Board.cpp  Utility.cpp  main.cpp
MultiGameIA3/x64/Release/: MultiGameIA3.exe.recipe  MultiGameIA3.iobj  MultiGameIA3.ipdb
MultiGameIA3/x64/Release/MultiGameIA3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MultiGameIA3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Source/: BasicBoard.cpp  ChessBoard.cpp  Game.cpp  GameMenu.cpp  MainLoop.cpp  Menu.cpp  MenuManager.cpp  Node.cpp  NodePool.cpp  OptionSelector.cpp  Piece.cpp  Player.cpp  Power4Board.cpp  Replayer.cpp  Utility.cpp  main.cpp
Source/Graphics/: Container.cpp  Image.cpp  Menu.cpp  OptionSelector.cpp  ScrollBar.cpp
